# Chatbot_Automation_AzureDevops

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  settings.py
backend-chat/: .env.example  pyproject.toml  settings.py
backend-chat/domains/: user.py
backend-chat/features/chat/: chat_controller.py
backend-chat/features/chat/methods/: chatbot.py
backend-chat/infrastructure/constants/: prompts.py  work_item.py
backend-chat/infrastructure/services/: chatbot_service.py  llm_utils.py
backend-chat/infrastructure/services/azure/: azure_client.py  azure_service.py
backend-chat/infrastructure/tools/: azure_tools.py
backend-chat/migrations/versions/: 896107d7d23d_initial_migration.py
backend-tools/: .env.example  Dockerfile  main.py  pyproject.toml  settings.py  start.sh
backend-tools/features/: base_handler.py
backend-tools/features/projects/: projects_controller.py
backend-tools/features/work_items/: work_items_controller.py
backend-tools/infrastructure/enums/: work_item.py
backend/domains/: __init__.py  conversation_history.py
backend/features/: base_handler.py
backend/features/chat/methods/: chatbot.py
backend/infrastructure/services/: chatbot_service.py  chatbot_service_sincrono.py
backend/infrastructure/services/azure/: azure_service.py
backend/infrastructure/tools/: azure_tools.py
backend/migrations/versions/: 066e7d9c3392_initial_migration.py
backend/services/: azure_devops.py  chatbot_service.py
backend/tools/: azure_tools.py
(+10 files in other folders)
