[project]
name = "src"
version = "0.1.0"
description = "Chatbot Tool Calling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "pydantic-settings>=2.13.0",
    "langchain>=1.2.10",
    "langchain-core>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "azure-devops>=7.1.0b4",
]
